[metadata]
name = viur-toolkit
version = attr: viur.toolkit.version.__version__
author = Sven Eberth
author_email = se@mausbrand.de
maintainer = Sven Eberth
maintainer_email = se@mausbrand.de
description = A kit of helpers and tools to simplify more intensive use of ViUR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viur-framework/viur-toolkit
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.10
package_dir =
    = src
